test/simple/ill-typed/let_int.caprice
(* TEST
  include refutable;
*)


let x : int = true
